Add chameleon spawn config